--- a/src/assets/css/reset.css
+++ b/src/assets/css/reset.css
@@ -1,4 +1,19 @@
 *{
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+}
+body{
+  font-size: 16px;
+}
+
+*::before, *::after{
+  box-sizing: border-box;
+}
+a{
+  text-decoration: none;
+}
+
+ul{
+  list-style: none;
 }
