--- a/src/assets/css/reset.css
+++ b/src/assets/css/reset.css
@@ -3,8 +3,12 @@
   padding: 0;
   box-sizing: border-box;
 }
+html,body{
+  height: 100%;
+}
 body{
   font-size: 16px;
+  background: #F8F8F8;
 }
 
 *::before, *::after{
